--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
+    "react-scroll": "^1.9.3",
     "swiper": "^11.2.4",
     "typewriter-effect": "^2.21.0"
   },
